[project]
name = "dsa-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "ashfordj@rocketmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dsa-learning = "dsa_learning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]
